# OpenCV_for_suction_grasps

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bluring.py  cmake_install.cmake  contouring  cv_test.py  down_sampling  down_sampling.cpp  rename_directory.py  results.txt
resources/Original_images/camera_lg/: obj_multi_001jpg
src/cpp/: contouring.cpp  down_sampling.cpp
