cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
find_package( OpenCV REQUIRED )
add_executable( down_sampling src/cpp/down_sampling.cpp )
add_executable( contouring src/cpp/contouring.cpp )
target_link_libraries( down_sampling  ${OpenCV_LIBS} )
target_link_libraries( contouring ${OpenCV_LIBS} )
